play videos automatically on chrome

--- a/src/content/work/component-libraries.mdx
+++ b/src/content/work/component-libraries.mdx
@@ -50,7 +50,7 @@ import videoStillTrailer from 'assets/video/redds/trailer.jpg'
 </Stack>
 
 <Browser>
-  <Video autoPlay loop>
+  <Video autoPlay loop muted>
     <source src={videoMP4Integrity} type="video/mp4" />
   </Video>
 </Browser>
