--- a/src/content/work/redds.mdx
+++ b/src/content/work/redds.mdx
@@ -36,7 +36,7 @@ import videoStillTrailer from 'assets/video/redds/trailer.jpg'
   </GalleryItem>
 
 <GalleryItem>
-  <Video autoPlay loop>
+  <Video autoPlay loop muted>
     <source src={videoMP4Interface} type="video/mp4" />
     <source src={videoWebmInterface} type="video/webm" />
   </Video>
