--- a/src/content/work/remedy-plan.mdx
+++ b/src/content/work/remedy-plan.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Remedy Plan Therapeutics'
 link: https://remedyplan.com
-order: 4
+order: 2
 background: 'darkblue'
 overhang: true
 draft: false
@@ -33,7 +33,10 @@ import imageStillIdentity from 'assets/images/remedy-plan/still/identity.gif'
 
 <Gallery>
   <GalleryItem>
-    <Still src={imageStillIdentity} alt="Graphic: Remedy Plan branding compilation" />
+    <Still
+      description="Logos and branding examples, featuring a moonshot-inspired color palette"
+      src={imageStillIdentity}
+      alt="Graphic: Remedy Plan branding compilation" />
   </GalleryItem>
 
 <GalleryItem>
@@ -49,6 +52,7 @@ import imageStillIdentity from 'assets/images/remedy-plan/still/identity.gif'
 <GalleryItem>
   <Browser>
     <Still
+      description="The first version of the remedyplan.com homepage"
       src={imageDesktopV1Home}
       alt="Screenshot: The first iteration of the remedyplan.com homepage"
     />
@@ -68,6 +72,7 @@ import imageStillIdentity from 'assets/images/remedy-plan/still/identity.gif'
 <GalleryItem>
   <Browser>
     <Still
+      description="A page from the second version of remedyplan.com"
       src={imageDesktopV2Team}
       alt="Screenshot: The team page on the second iteration of remedyplan.com"
     />
@@ -118,9 +123,9 @@ import imageStillIdentity from 'assets/images/remedy-plan/still/identity.gif'
 
 <Markdown>
 
-I spent much of 2015 helping to launch Remedy Plan Therapeutics, a Maryland-based biotech startup working to develop the first drugs that prevent cancer cells from multiplying. Since that time, Remedy Plan has raised nearly $3.4 million and identified 3 drugs to advance through the development pipeline. They are currently working to raise a $13 million Series A round to push their first drug through Phase 1 clinical trials.
+I spent much of 2015 working with a small team to launch Remedy Plan Therapeutics, a Maryland-based biotech startup developing the first drugs that prevent cancer cells from multiplying. Remedy Plan has now raised nearly $3.4 million and identified 3 drugs to advance through the development pipeline. They are currently working to raise a $13 million Series A round to push their first drug through Phase 1 clinical trials.
 
-I led the company's digital efforts, and was responsible for branding, design, and site development. I also played a substantial role in creating a crowdfunding campaign that raised the initial seed money for the new venture.
+I led the company's digital efforts, responsible for branding, design, and site development. I also played a critical role in creating a crowdfunding campaign which resulted in raising the initial seed money to start the venture.
 
 ## Background
 
@@ -128,7 +133,7 @@ A microbiologist by day, Remedy Plan CEO Greg Crimmins had been working to form 
 
 While chatting about it one day, Greg mentioned that he was considering crowdfunding as a last-ditch effort to raise a year's worth of seed money, and I immediately knew that I could help make it happen.
 
-Over the next year, alongside Allison Crimmins and Katel LeDu, Remedy Plan was born over nights and weekends together, developing pitches, business plans, branding and communication strategies, and ultimately launching a crowdfunding campaign that raised over $100k on Indiegogo in 30 days.
+Over the next year, alongside Allison Crimmins and Katel LeDu, Remedy Plan was born from nights and weekends spent together developing pitches, business plans, branding and communication strategies — and ultimately launching a crowdfunding campaign that raised over $100k on Indiegogo in 30 days.
 
 </Markdown>
 
@@ -145,7 +150,7 @@ In the months that followed, Greg used the campaign's momentum to expand the see
 
 ## My role
 
-Having just left a position developing new products and building large-scale ad campaigns at [iSL](https://isl.co), I was lucky to have exactly the kind of experience bringing a bunch of [giant](https://isl.co/work/the-socialsphere-data-visualization-in-the-motor-city-of-germany/), <Link to="/work/redds">wild</Link> ideas to life that this project needed.
+Having just left a position developing new products and building large-scale ad campaigns at [iSL](https://isl.co), I was lucky to have exactly the kind of experience needed to bring a bunch of [giant](https://isl.co/work/the-socialsphere-data-visualization-in-the-motor-city-of-germany/), <Link to="/work/redds">wild</Link> ideas to life for the project.
 
 My earliest role was to define the initial strategy around our crowdfunding approach, which focused on telling the Remedy Plan story in an accessible and compelling way.
 
@@ -157,9 +162,9 @@ Throughout this process I created all of Remedy Plan's visual design assets, des
 
 ### Version 1
 
-The first version of [remedyplan.com](https://remedyplan.com), launched alongside our campaign, was designed to explain a complex idea in an  accessible and inspiring way, to an audience without a background in science. We wanted to clearly outline why this approach was revolutionary, why it was worth investment, and why we could only bring it to life with their help.
+The first version of [remedyplan.com](https://remedyplan.com), launched alongside our campaign, was designed to explain a complex idea in an accessible and inspiring way, to an audience without a background in science. We wanted to clearly outline why this approach was revolutionary, why it was worth investment, and why we could only bring it to life with their help.
 
-It was also important to communicate the profound sense of gratitude and respect we felt for this audience, who were ultimately investing in us as people and their faith that we could make this moonshot possible.
+It was also important to communicate the profound gratitude and respect we felt for this audience, as they were ultimately investing in us as people and their faith in us was going to make this moonshot possible.
 
 </Markdown>
 
