--- a/src/content/work/product-development.mdx
+++ b/src/content/work/product-development.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Product Development'
 link: null
-order: 3
+order: 6
 background: 'orange'
 overhang: true
 draft: false
@@ -17,6 +17,7 @@ import Markdown from 'components/Markdown'
 import List from 'components/List'
 import { Element as ListItem } from 'components/ListItem'
 import Stack from 'components/Stack'
+import Link from 'components/Link'
 
 import imageStillPlanning from 'assets/images/product/still/planning.jpg'
 import imageStillV1Concept from 'assets/images/product/still/concept-v1.jpg'
@@ -27,6 +28,7 @@ import videoMP4Interface from 'assets/video/product/v2-demo.mp4'
 
 <GalleryItem>
   <Still
+    description="Research materials generated during product planning phases"
     src={imageStillPlanning}
     alt="Photo: Collage of research conducted during product planning phases"
   />
@@ -34,14 +36,19 @@ import videoMP4Interface from 'assets/video/product/v2-demo.mp4'
 
 <GalleryItem>
   <Still
-    description="A hi-fidelity mockup of the first iteration's menubar interface"
+    description="A hi-fidelity mockup of the first product iteration's menubar interface"
     src={imageStillV1Menu}
     alt="Screenshot: Hi-fidelity mockup of the v1 interface"
   />
 </GalleryItem>
 
 <GalleryItem>
-  <Video autoPlay loop muted>
+  <Video
+    autoPlay
+    loop
+    muted
+    description="An animated mockup of the second iteration, demoing interactions"
+  >
     <source src={videoMP4Interface} type="video/mp4" />
   </Video>
 </GalleryItem>
@@ -53,7 +60,10 @@ import videoMP4Interface from 'assets/video/product/v2-demo.mp4'
 <Stack>
   <List>
     <ListItem>
-      <p>Meetings, whiteboards, Google Docs, Lean Startup principles</p>
+      <p>
+        Meetings, whiteboards, Google Docs,{' '}
+        <Link to="http://theleanstartup.com/">Lean Startup</Link>
+      </p>
     </ListItem>
     <ListItem>
       <p>Prototypes in Omnigraffle, Keynote, Sketch, After Effects</p>
