--- a/src/content/work/criterion.mdx
+++ b/src/content/work/criterion.mdx
@@ -100,7 +100,7 @@ import videoMP4Slideshow from 'assets/video/criterion/slideshow.mp4'
 
 <Markdown>
 
-Since mid-2017, I've worked as a full stack developer helping to launch and maintain the first redesign of [criterion.com](https://criterion.com) in over a decade.
+Since mid-2017, I've worked as a full stack developer helping to launch and maintain the first redesign of <Link to="https://criterion.com">criterion.com</Link> in over a decade.
 
 I was part of a small team contracted to pick up where a prior agency had left off, and inherited a beautifully-designed set of static front end templates and a partially completed back end build.
 
