--- a/src/content/work/national-geographic.mdx
+++ b/src/content/work/national-geographic.mdx
@@ -14,6 +14,7 @@ import Still from 'components/Still'
 import PostColumn from 'components/PostColumn'
 import Markdown from 'components/Markdown'
 import List from 'components/List'
+import Link from 'components/Link'
 import { Element as ListItem } from 'components/ListItem'
 import Stack from 'components/Stack'
 
@@ -93,7 +94,7 @@ Over the course of a year, I worked alongside every team in the digital division
 
 ## Approach
 
-Leveraging the power of Django's template inheritance model and Nicole Sullivan's brilliant [object-oriented approach to CSS](http://www.stubbornella.org/content/2009/02/28/object-oriented-css-grids-on-github/), I created a highly modular framework capable of generating scores of different page layouts under a unified markup scheme. And prioritizing web standards compliance and progressive enhancement techniques ensured that we had a more semantic, search-friendly, and accessible site than ever before.
+Leveraging the power of Django's template inheritance model and Nicole Sullivan's brilliant <Link to="http://www.stubbornella.org/content/2009/02/28/object-oriented-css-grids-on-githu/">object-oriented approach to CSS</Link>, I created a highly modular framework capable of generating scores of different page layouts under a unified markup scheme. And prioritizing web standards compliance and progressive enhancement techniques ensured that we had a more semantic, search-friendly, and accessible site than ever before.
 
 </Markdown>
 
@@ -108,9 +109,9 @@ Leveraging the power of Django's template inheritance model and Nicole Sullivan'
 
 ## Recognition
 
-- [Adweek's 2010 Magazine Site of the Year](https://www.adweek.com/brand-marketing/magazine-web-site-year-102953/)
-- [Time's 50 Best Websites of 2010](http://content.time.com/time/specials/packages/article/0,28804,2012721_2012887_2012883,00.html)
-- [Steve Jobs visits nationalgeographic.com onstage during the 2010 iPad keynote](https://youtu.be/zZtWlSDvb_k?t=873)
+- <Link to="https://www.adweek.com/brand-marketing/magazine-web-site-year-102953/">Adweek's 2010 Magazine Site of the Year</Link>
+- <Link to="http://content.time.com/time/specials/packages/article/0,28804,2012721_2012887_2012883,00.html">Time's 50 Best Websites of 2010</Link>
+- <Link to="https://youtu.be/zZtWlSDvb_k?t=873">Steve Jobs visits nationalgeographic.com onstage during the 2010 iPad keynote</Link>
 
 </Markdown>
 
