--- a/src/content/work/remedy-plan.mdx
+++ b/src/content/work/remedy-plan.mdx
@@ -123,13 +123,13 @@ import imageStillIdentity from 'assets/images/remedy-plan/still/identity.gif'
 
 <Markdown>
 
-I spent much of 2015 working with a small team to launch Remedy Plan Therapeutics, a Maryland-based biotech startup developing the first drugs that prevent cancer cells from multiplying. Remedy Plan has now raised nearly $3.4 million and identified 3 drugs to advance through the development pipeline. They are currently working to raise a $13 million Series A round to push their first drug through Phase 1 clinical trials.
+I spent much of 2015 working with a small team to launch Remedy Plan Therapeutics, a Maryland-based biotech startup developing the first drugs that prevent cancer cells from multiplying. Remedy Plan has now raised nearly $3.4 million and identified 3 drugs to advance through the development pipeline. They are currently working to raise a$13 million Series A round to push their first drug through Phase 1 clinical trials.
 
 I led the company's digital efforts, responsible for branding, design, and site development. I also played a critical role in creating a crowdfunding campaign which resulted in raising the initial seed money to start the venture.
 
 ## Background
 
-A microbiologist by day, Remedy Plan CEO Greg Crimmins had been working to form a new company [based on a _eureka_ moment in 2012](https://remedyplan.com/posts/the-eureka-moment). But funding for independent drug development is notoriously difficult to raise, and after years of roadblocks and a rapidly decreasing runway, the project's future was in jeopardy.
+A microbiologist by day, Remedy Plan CEO Greg Crimmins had been working to form a new company <Link to="https://remedyplan.com/posts/the-eureka-moment">based on a _eureka_ moment in 2012</Link>. But funding for independent drug development is notoriously difficult to raise, and after years of roadblocks and a rapidly decreasing runway, the project's future was in jeopardy.
 
 While chatting about it one day, Greg mentioned that he was considering crowdfunding as a last-ditch effort to raise a year's worth of seed money, and I immediately knew that I could help make it happen.
 
@@ -150,19 +150,19 @@ In the months that followed, Greg used the campaign's momentum to expand the see
 
 ## My role
 
-Having just left a position developing new products and building large-scale ad campaigns at [iSL](https://isl.co), I was lucky to have exactly the kind of experience needed to bring a bunch of [giant](https://isl.co/work/the-socialsphere-data-visualization-in-the-motor-city-of-germany/), <Link to="/work/redds">wild</Link> ideas to life for the project.
+Having just left a position developing new products and building large-scale ad campaigns at <Link to="https://isl.co/">ISL</Link>, I was lucky to have exactly the kind of experience needed to bring a bunch of <Link to="https://isl.co/work/the-socialsphere-data-visualization-in-the-motor-city-of-germany/">giant</Link>, <Link to="/work/redds">wild</Link> ideas to life for the project.
 
 My earliest role was to define the initial strategy around our crowdfunding approach, which focused on telling the Remedy Plan story in an accessible and compelling way.
 
 I led discovery exercises that helped us to find a name, build a narrative around the company, develop pitches tailored to public and private investors, and brand Remedy Plan as a serious, professional operation with world-changing potential.
 
-Throughout this process I created all of Remedy Plan's visual design assets, designed and developed [remedyplan.com](https://remedyplan.com), and shot, directed, and edited a [90-second pitch video](https://www.youtube.com/watch?v=ctsfWUOm8Es&t=4s) for our Indiegogo campaign.
+Throughout this process I created all of Remedy Plan's visual design assets, designed and developed <Link to="https://remedyplan.com/">remedyplan.com</Link>, and shot, directed, and edited a <Link to="https://www.youtube.com/watch?v=ctsfWUOm8Es">90-second pitch video</Link> for our Indiegogo campaign.
 
 ## The Sites
 
 ### Version 1
 
-The first version of [remedyplan.com](https://remedyplan.com), launched alongside our campaign, was designed to explain a complex idea in an accessible and inspiring way, to an audience without a background in science. We wanted to clearly outline why this approach was revolutionary, why it was worth investment, and why we could only bring it to life with their help.
+The first version of <Link to="https://remedyplan.com/">remedyplan.com</Link>, launched alongside our campaign, was designed to explain a complex idea in an accessible and inspiring way, to an audience without a background in science. We wanted to clearly outline why this approach was revolutionary, why it was worth investment, and why we could only bring it to life with their help.
 
 It was also important to communicate the profound gratitude and respect we felt for this audience, as they were ultimately investing in us as people and their faith in us was going to make this moonshot possible.
 
@@ -179,7 +179,7 @@ It was also important to communicate the profound gratitude and respect we felt 
 
 ### Version 2
 
-Redesigned to coincide with Remedy Plan's Series A round, the second version of [remedyplan.com](https://remedyplan.com), was designed with an audience of institutional investors in mind. This group was likely to have deep experience in the biotech sector, and to be much more familiar with the science behind the company's work.
+Redesigned to coincide with Remedy Plan's Series A round, the second version of <Link to="https://remedyplan.com/">remedyplan.com</Link>, was designed with an audience of institutional investors in mind. This group was likely to have deep experience in the biotech sector, and to be much more familiar with the science behind the company's work.
 
 Our primary goal was to immediately communicate the state of Remedy Plan's tremendous progress in a manner that was consistent with industry expectations, while also positioning the company as an energetic, novel, and forward-thinking organization with serious credibility.
 
