--- a/src/content/work/redds.mdx
+++ b/src/content/work/redds.mdx
@@ -107,7 +107,7 @@ Coordinating so many moving parts at once led to one of the most challenging asp
 
 Lag was a prime example. Livestreaming partners had to be lined up early in the project's lifecycle, and our team was assured that the platform's lag time would be a couple seconds at most. After designing the gameplay accordingly, we discovered a few weeks later during testing that the actual lag time was anywhere from five seconds to a full minute, instantly rendering weeks of work unusable.
 
-With time bearing down we couldn't afford a full refactor of the game mechanics, so the team had 24 hours to design and test a new approach that could keep the project afloat. Huddled together, we devised a queue-based system, where players would position each of their shots using the existing interface, and trigger the cannon to fire them off in sequence. We padded the time between gameplay elements to keep any of the action from going too far of sync with the video, and had a working prototype running the next day.
+With time bearing down we couldn't afford a full refactor of the game mechanics, so the team had 24 hours to design and test a new approach that could keep the project afloat. Huddled together, we devised a queue-based system, where players would position each of their shots using the existing interface, and trigger the cannon to fire them off in sequence. We padded the time between gameplay elements to keep any of the action from going too far out of sync with the video, and had a working prototype running the next day.
 
 </Markdown>
 
